Refactor code structure for improved readability and maintainability

--- a/assets/style.css
+++ b/assets/style.css
@@ -132,9 +132,16 @@
             background-repeat: no-repeat;
         }
 
+        .card-body {
+            background-color: #f5f5f5;
+        }
+        .card-body .btn {
+            background-color: blanchedalmond;
+            border: none;
+        }
+
         /* Info Section */
         /* Grid Cards (History, Jobs, Culture) */
-        /* CARD GRID HOVER EFFECT */
         .info-card {
             border-radius: 12px;
             overflow: hidden;
