--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,14 @@
         body {
             font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
             scroll-behavior: smooth;
+            z-index: 0;
+            position: relative;
         }
 
         /* Transparent Navbar */
         .navbar {
             transition: background-color 0.3s ease;
+            z-index: 99999 !important;
         }
 
         .navbar.scrolled {
@@ -41,6 +44,7 @@
             justify-content: center;
             color: white;
             text-align: center;
+            z-index: 1;
             position: relative;
         }
 
